--- a/ThinkLikeSmart/ThinkLikeSmart.iOS/Resources/Base.lproj/LoginStoryboard.storyboard
+++ b/ThinkLikeSmart/ThinkLikeSmart.iOS/Resources/Base.lproj/LoginStoryboard.storyboard
@@ -42,23 +42,19 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleColor" colorSpace="calibratedRGB" red="0" green="0" blue="0" alpha="1"/>
                                 </state>
-                                <connections>
-                                    <action selector="UIButton20_TouchUpInside:" destination="5" id="59" eventType="touchUpInside"/>
-                                </connections>
+                                <connections/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="21" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
                                 <rect key="frame" x="20" y="214" width="560" height="30"/>
                                 <state key="normal" title="Button">
                                     <color key="titleColor" colorSpace="calibratedRGB" red="0" green="0.52549019607843139" blue="1" alpha="1"/>
                                 </state>
-                                <connections>
-                                    <action selector="UIButton21_TouchUpInside:" destination="5" id="86" eventType="touchUpInside"/>
-                                </connections>
+                                <connections/>
                             </button>
                             <navigationBar contentMode="scaleToFill" id="106" translatesAutoresizingMaskIntoConstraints="NO">
                                 <rect key="frame" x="0.0" y="30" width="600" height="44"/>
                                 <items>
-                                    <navigationItem title="Title" id="107"/>
+                                    <navigationItem id="107"/>
                                 </items>
                             </navigationBar>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="120" translatesAutoresizingMaskIntoConstraints="NO">
@@ -112,13 +108,13 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="Title" destination="106" id="name-outlet-106"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-339" y="-275"/>
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedScreenMetrics key="destination" type="retina55"/>
-    </simulatedMetricsContainer>
 </document>
