--- a/ThinkLikeSmart/ThinkLikeSmart.iOS/Resources/Base.lproj/LoginStoryboard.storyboard
+++ b/ThinkLikeSmart/ThinkLikeSmart.iOS/Resources/Base.lproj/LoginStoryboard.storyboard
@@ -16,29 +16,54 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="12" misplaced="YES">
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="12" misplaced="YES">
                                 <rect key="frame" x="20" y="108" width="560" height="29"/>
                                 <segments>
                                     <segment title="Email/User ID"/>
                                     <segment title="Phone"/>
                                 </segments>
                             </segmentedControl>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Text" borderStyle="roundedRect" minimumFontSize="17" id="17" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="17" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES" placeholder="Please input Email/ID">
                                 <rect key="frame" x="20" y="145" width="560" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                 <variation key="heightClass=regular-widthClass=regular" misplaced="YES">
                                     <rect key="frame" x="20" y="145" width="728" height="30"/>
                                 </variation>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute keyPath="layer.cornerRadius" type="number">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Text" borderStyle="roundedRect" minimumFontSize="17" id="18" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="18" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES" placeholder="Please input Password">
                                 <rect key="frame" x="20" y="176" width="560" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute keyPath="layer.cornerRadius" type="number">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="20" y="175" width="280" height="30"/>
+                                </variation>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="20" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
-                                <rect key="frame" x="534" y="252" width="46" height="30"/>
-                                <state key="normal" title="Button">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="146" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
+                                <rect key="frame" x="550" y="179" width="24" height="24"/>
+                                <state key="normal" image="icon-lock-closed">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="270" y="178" width="24" height="24"/>
+                                </variation>
+                                <state key="selected" image="icon-lock-opened"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="20" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
+                                <rect key="frame" x="453" y="252" width="127" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <state key="normal" title="Forget Password?">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleColor" colorSpace="calibratedRGB" red="0" green="0" blue="0" alpha="1"/>
                                 </state>
@@ -46,23 +71,43 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="21" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
                                 <rect key="frame" x="20" y="214" width="560" height="30"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleColor" colorSpace="calibratedRGB" red="0" green="0.52549019607843139" blue="1" alpha="1"/>
+                                <color key="tintColor" colorSpace="calibratedRGB" red="0" green="0.52549019607843139" blue="1" alpha="1"/>
+                                <state key="normal" title="Login" backgroundImage="button-background">
+                                    <color key="titleColor" colorSpace="calibratedRGB" red="1" green="1" blue="1" alpha="1"/>
                                 </state>
                                 <connections/>
+                                <state key="highlighted" backgroundImage="button-background-pressed"/>
                             </button>
-                            <navigationBar contentMode="scaleToFill" id="106" translatesAutoresizingMaskIntoConstraints="NO">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="120" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                                <rect key="frame" x="248" y="526" width="105" height="30"/>
+                                <color key="backgroundColor" colorSpace="calibratedRGB" red="0.84313725490196079" green="0.84313725490196079" blue="0.84313725490196079" alpha="1"/>
+                                <state key="normal" title="Register">
+                                    <color key="titleColor" colorSpace="calibratedWhite" white="0.333333333333333" alpha="1"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute keyPath="layer.cornerRadius" type="number">
+                                        <real key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="159" y="593" width="57" height="30"/>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
+                                    <rect key="frame" x="312" y="938" width="127" height="42"/>
+                                </variation>
+                            </button>
+                            <navigationBar contentMode="center" id="106" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
                                 <rect key="frame" x="0.0" y="30" width="600" height="44"/>
                                 <items>
-                                    <navigationItem id="107"/>
+                                    <navigationItem id="107" title="Account Login">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" id="241"/>
+                                    </navigationItem>
                                 </items>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="30" width="320" height="44"/>
+                                </variation>
                             </navigationBar>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="120" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="277" y="544" width="46" height="30"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
                         </subviews>
                         <constraints>
                             <constraint id="44" firstItem="12" firstAttribute="leading" secondItem="6" secondAttribute="leading" constant="20"/>
@@ -73,48 +118,44 @@
                             <constraint id="54" firstItem="18" firstAttribute="leading" secondItem="6" secondAttribute="leading" constant="20"/>
                             <constraint id="55" firstItem="6" firstAttribute="trailing" secondItem="17" secondAttribute="trailing" constant="20"/>
                             <constraint id="56" firstItem="6" firstAttribute="trailing" secondItem="18" secondAttribute="trailing" constant="20"/>
-                            <constraint id="57" firstItem="21" firstAttribute="leading" secondItem="6" secondAttribute="leading" constant="20"/>
-                            <constraint id="58" firstItem="6" firstAttribute="trailing" secondItem="21" secondAttribute="trailing" constant="20"/>
-                            <constraint id="60" firstItem="6" firstAttribute="trailing" secondItem="20" secondAttribute="trailing" constant="20"/>
                             <constraint id="82" firstItem="17" firstAttribute="top" secondItem="12" secondAttribute="centerY" constant="22"/>
                             <constraint id="83" firstItem="17" firstAttribute="top" secondItem="12" secondAttribute="bottom" constant="8"/>
-                            <constraint id="85" firstItem="21" firstAttribute="top" secondItem="18" secondAttribute="bottom" constant="8"/>
-                            <constraint id="87" firstItem="21" firstAttribute="top" secondItem="18" secondAttribute="bottom" constant="8"/>
-                            <constraint id="88" firstItem="20" firstAttribute="top" secondItem="21" secondAttribute="bottom" constant="8"/>
-                            <constraint id="108" firstItem="106" firstAttribute="leading" secondItem="6" secondAttribute="leading"/>
-                            <constraint id="109" firstItem="106" firstAttribute="trailing" secondItem="6" secondAttribute="trailing"/>
-                            <constraint id="110" firstItem="106" firstAttribute="top" secondItem="2" secondAttribute="bottom" constant="10"/>
-                            <constraint id="112" firstItem="12" firstAttribute="top" secondItem="106" secondAttribute="bottom" constant="34"/>
-                            <constraint id="115" firstItem="12" firstAttribute="top" secondItem="106" secondAttribute="bottom" constant="34"/>
-                            <constraint id="123" firstItem="3" firstAttribute="top" secondItem="120" secondAttribute="bottom" constant="26"/>
-                            <constraint id="124" firstItem="106" firstAttribute="centerX" secondItem="120" secondAttribute="centerX"/>
+                            <constraint id="152" firstItem="146" firstAttribute="centerY" secondItem="18" secondAttribute="centerY"/>
+                            <constraint id="162" firstItem="18" firstAttribute="trailing" secondItem="146" secondAttribute="trailing" constant="6"/>
+                            <constraint id="163" firstItem="18" firstAttribute="trailing" secondItem="146" secondAttribute="trailing" constant="6"/>
+                            <constraint id="164" firstItem="18" firstAttribute="bottom" secondItem="146" secondAttribute="bottom" constant="3"/>
+                            <constraint id="165" firstItem="146" firstAttribute="top" secondItem="17" secondAttribute="bottom" constant="4"/>
+                            <constraint id="169" firstItem="18" firstAttribute="trailing" secondItem="146" secondAttribute="leading" constant="30"/>
+                            <constraint id="172" firstItem="18" firstAttribute="centerY" secondItem="146" secondAttribute="centerY"/>
+                            <constraint id="175" firstItem="18" firstAttribute="centerY" secondItem="146" secondAttribute="centerY"/>
+                            <constraint id="253" firstItem="6" firstAttribute="trailing" secondItem="20" secondAttribute="trailing" constant="20"/>
+                            <constraint id="258" firstItem="21" firstAttribute="leading" secondItem="6" secondAttribute="leading" constant="20"/>
+                            <constraint id="259" firstItem="6" firstAttribute="trailing" secondItem="21" secondAttribute="trailing" constant="20"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="88"/>
-                                <exclude reference="112"/>
-                                <exclude reference="115"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=regular-widthClass=regular">
-                            <mask key="constraints">
-                                <include reference="88"/>
+                                <exclude reference="172"/>
+                                <exclude reference="175"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="constraints">
-                                <include reference="112"/>
-                                <include reference="115"/>
+                                <include reference="172"/>
+                                <include reference="175"/>
                             </mask>
                         </variation>
                     </view>
-                    <connections>
-                        <outlet property="Title" destination="106" id="name-outlet-106"/>
-                    </connections>
+                    <connections/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-339" y="-275"/>
+            <point key="canvasLocation" x="-521" y="-291"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icon-lock-closed" width="80" height="80"/>
+        <image name="icon-lock-opened" width="80" height="80"/>
+        <image name="button-background-pressed" width="80" height="30"/>
+        <image name="button-background" width="80" height="30"/>
+    </resources>
 </document>
