--- a/ThinkLikeSmart/ThinkLikeSmart.Droid/Resources/layout/activity_login.axml
+++ b/ThinkLikeSmart/ThinkLikeSmart.Droid/Resources/layout/activity_login.axml
@@ -23,38 +23,29 @@
     <RadioGroup
         android:id="@+id/layout_login_type"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/login_type_layout_height"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_below="@+id/layout_title"
-        android:layout_marginTop="@dimen/item_group_margin_top"
-        android:orientation="horizontal">
-        <RelativeLayout
+        android:layout_marginTop="@dimen/item_group_margin_top_half"
+        >
+        <RadioButton
+            android:id="@+id/type_phone"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1">
-            <RadioButton
-                android:id="@+id/type_phone"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:gravity="center"
-                android:text="@string/phone_login"
-                android:textColor="@color/text_color_black"
-                android:textSize="@dimen/text_size_normal" />
-        </RelativeLayout>
-        <RelativeLayout
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/phone_login"
+            android:textColor="@color/text_color_black"
+            android:textSize="@dimen/text_size_normal" />
+        <RadioButton
+            android:id="@+id/type_email"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1">
-            <RadioButton
-                android:id="@+id/type_email"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:gravity="center"
-                android:text="@string/email_login"
-                android:textColor="@color/text_color_black"
-                android:textSize="@dimen/text_size_normal" />
-        </RelativeLayout>
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/email_login"
+            android:textColor="@color/text_color_black"
+            android:textSize="@dimen/text_size_normal" />
     </RadioGroup>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -67,7 +58,7 @@
             android:layout_height="@dimen/edit_height"
             android:layout_marginLeft="@dimen/item_left_right_margin"
             android:layout_marginRight="@dimen/item_left_right_margin"
-            android:layout_marginTop="@dimen/item_group_margin_top"
+            android:layout_marginTop="@dimen/item_group_margin_top_half"
             android:background="@drawable/tiao_bg_normal">
             <TextView
                 android:id="@+id/count"
@@ -264,8 +255,7 @@
             android:gravity="center"
             android:text="@string/forget_pwd"
             android:textColor="@color/text_color_black"
-            android:textSize="@dimen/text_size_normal"
-            />
+            android:textSize="@dimen/text_size_normal" />
     </RelativeLayout>
     <RelativeLayout
         android:id="@+id/dialog_remember"
