--- a/ThinkLikeSmart/ThinkLikeSmart.iOS/Resources/Base.lproj/LoginStoryboard.storyboard
+++ b/ThinkLikeSmart/ThinkLikeSmart.iOS/Resources/Base.lproj/LoginStoryboard.storyboard
@@ -90,11 +90,11 @@
                                         <rect key="frame" x="253" y="158" width="24" height="24"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
-                                        <state key="normal" image="icon-lock-closed">
+                                        <state key="normal" image="icon-lock-opened">
                                             <color key="titleColor" red="0.0" green="0.52549019607843139" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
-                                        <state key="selected" image="icon-lock-opened"/>
+                                        <state key="selected" image="icon-lock-closed"/>
                                     </button>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="364">
                                         <rect key="frame" x="0.0" y="93" width="278" height="33"/>
@@ -150,7 +150,7 @@
                         <outlet property="forgetPasswordButton" destination="20" id="name-outlet-20"/>
                         <outlet property="loginButton" destination="21" id="name-outlet-21"/>
                         <outlet property="loginMethodSegmentedControl" destination="12" id="name-outlet-12"/>
-                        <outlet property="loginTextField" destination="17" id="name-outlet-17"/>
+                        <outlet property="accountNameTextField" destination="17" id="name-outlet-17"/>
                         <outlet property="passwordTextField" destination="18" id="name-outlet-18"/>
                         <outlet property="registrationButton" destination="120" id="name-outlet-120"/>
                         <outlet property="rememberPasswordButton" destination="146" id="name-outlet-146"/>
