--- a/ThinkLikeSmart/ThinkLikeSmart.Droid/Resources/layout/activity_login.axml
+++ b/ThinkLikeSmart/ThinkLikeSmart.Droid/Resources/layout/activity_login.axml
@@ -26,8 +26,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@+id/layout_title"
-        android:layout_marginTop="@dimen/item_group_margin_top_half"
-        >
+        android:layout_marginTop="@dimen/item_group_margin_top_half">
         <RadioButton
             android:id="@+id/type_phone"
             android:layout_width="0dp"
@@ -68,7 +67,6 @@
                 android:layout_alignParentStart="true"
                 android:background="#00000000"
                 android:gravity="center"
-                android:text="@string/china_number_code"
                 android:textColor="@color/text_color_black"
                 android:textSize="@dimen/text_size_normal"
                 android:maxLines="1" />
@@ -91,7 +89,6 @@
                 android:layout_toEndOf="@+id/separator"
                 android:background="#00000000"
                 android:gravity="center"
-                android:text="@string/china"
                 android:textColor="@color/text_color_black"
                 android:textSize="@dimen/text_size_normal"
                 android:maxLines="1" />
